2008-06-11 Use matplotlib.mathtext to render math expressions in
           online docs - MGD

2008-06-11 Move PNG loading/saving to its own extension module, and
           remove duplicate code in _backend_agg.cpp and _image.cpp
           that does the same thing - MGD

2008-06-11 Numerous mathtext bugfixes, primarily related to
           dpi-independence - MGD

2008-06-10 Bar now applies the label only to the first patch only, and
           sets '_nolegend_' for the other patch labels.  This lets
           autolegend work as expected for hist and bar - see
           https://sourceforge.net/tracker/index.php?func=detail&aid=1986597&group_id=80706&atid=560720
	   JDH

2008-06-10 Fix text baseline alignment bug.  [ 1985420 ] Repair of
           baseline alignment in Text._get_layout.  Thanks Stan West -
           MGD

2008-06-09 Committed Gregor's image resample patch to downsampling
           images with new rcparam image.resample - JDH

2008-06-09 Don't install Enthought.Traits along with matplotlib. For
           matplotlib developers convenience, it can still be
           installed by setting an option in setup.cfg while we figure
           decide if there is a future for the traited config - DSD

2008-06-09 Added range keyword arg to hist() - MM

2008-06-07 Moved list of backends to rcsetup.py; made use of lower
           case for backend names consistent; use validate_backend
           when importing backends subpackage - EF

2008-06-06 hist() revision, applied ideas proposed by Erik Tollerud and
           Olle Engdegard: make histtype='step' unfilled by default
           and introduce histtype='stepfilled'; use default color
           cycle; introduce reverse cumulative histogram; new align
           keyword - MM

2008-06-06 Fix closed polygon patch and also provide the option to
           not close the polygon - MGD

2008-06-05 Fix some dpi-changing-related problems with PolyCollection,
           as called by Axes.scatter() - MGD
